--- a/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj.filters
+++ b/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="_src\CGameState_ControlMakerMain.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="_src\CSlotFlowList.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="_src\_header\setup.h">
@@ -189,6 +192,15 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="_src\_header\CCastReaderFromCSV.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="_src\_header\CSlotFlowList.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="_src\_header\ISlotFlowManager.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="_src\_header\ESlotFlowFlag.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
