--- a/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj.filters
+++ b/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj.filters
@@ -203,5 +203,8 @@
     <ClInclude Include="_src\_header\ESlotFlowFlag.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="_src\_header\SControlMakeData.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
