--- a/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj.filters
+++ b/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="_src\CSlotFlowList.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="_src\CSlotControlManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="_src\_header\setup.h">
@@ -204,6 +207,12 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="_src\_header\SControlMakeData.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="_src\_header\SControlPositionData.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="_src\_header\CSlotControlManager.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
