--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /enc_temp_folder/4d4cbd799721deadffe889810919315
+/Slot_CtrlMaker/playData.sav
