Log.txtを無視するようgitignore変更

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /enc_temp_folder/4d4cbd799721deadffe889810919315
 /Slot_CtrlMaker/playData.sav
+/Slot_CtrlMaker/Log.txt
