--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /enc_temp_folder/4d4cbd799721deadffe889810919315
 /Slot_CtrlMaker/playData.sav
 /Slot_CtrlMaker/Log.txt
+/Slot_CtrlMaker/playData.sav.bak
