[ADD]リーチ目コレクション画像の追加漏れ判定ツール作成
色々増やして、この後引き込みチェックもCReelCheckerで実装予定

--- a/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj
+++ b/Slot_CtrlMaker/Slot_CtrlMaker.vcxproj
@@ -161,14 +161,18 @@
     <ClCompile Include="_src\CRandManager.cpp" />
     <ClCompile Include="_src\CRandomizerReaderFromCSV.cpp" />
     <ClCompile Include="_src\CReadDataListGeterFromCSV.cpp" />
+    <ClCompile Include="_src\CReadReachCollectionFromCSV.cpp" />
     <ClCompile Include="_src\CReel.cpp" />
+    <ClCompile Include="_src\CReelChecker.cpp" />
     <ClCompile Include="_src\CReelDataReaderFromCSV.cpp" />
     <ClCompile Include="_src\CReelManager.cpp" />
     <ClCompile Include="_src\CRestoreManager.cpp" />
     <ClCompile Include="_src\CSlotCastChecker.cpp" />
     <ClCompile Include="_src\CSlotControlManager.cpp" />
     <ClCompile Include="_src\CSlotFlowList.cpp" />
+    <ClCompile Include="_src\CSlotReachCollection.cpp" />
     <ClCompile Include="_src\CSlotTimerManager.cpp" />
+    <ClCompile Include="_src\CStopPosDataReaderFromCSV.cpp" />
     <ClCompile Include="_src\ErrClass.cpp" />
     <ClCompile Include="_src\gameloop.cpp" />
     <ClCompile Include="_src\IGameModeBase.cpp" />
@@ -188,14 +192,18 @@
     <ClInclude Include="_src\_header\CRandManager.hpp" />
     <ClInclude Include="_src\_header\CRandomizerReaderFromCSV.hpp" />
     <ClInclude Include="_src\_header\CReadDataListGeterFromCSV.hpp" />
+    <ClInclude Include="_src\_header\CReadReachCollectionFromCSV.hpp" />
     <ClInclude Include="_src\_header\CReel.hpp" />
+    <ClInclude Include="_src\_header\CReelChecker.hpp" />
     <ClInclude Include="_src\_header\CReelDataReaderFromCSV.hpp" />
     <ClInclude Include="_src\_header\CReelManager.hpp" />
     <ClInclude Include="_src\_header\CRestoreManager.hpp" />
     <ClInclude Include="_src\_header\CSlotCastChecker.hpp" />
     <ClInclude Include="_src\_header\CSlotControlManager.hpp" />
     <ClInclude Include="_src\_header\CSlotFlowList.hpp" />
+    <ClInclude Include="_src\_header\CSlotReachCollection.hpp" />
     <ClInclude Include="_src\_header\CSlotTimerManager.hpp" />
+    <ClInclude Include="_src\_header\CStopPosDataReaderFromCSV.hpp" />
     <ClInclude Include="_src\_header\EChangeModeFlag.h" />
     <ClInclude Include="_src\_header\EChangeStateFlag.h" />
     <ClInclude Include="_src\_header\ErrClass.hpp" />
@@ -215,9 +223,11 @@
     <ClInclude Include="_src\_header\setup.h" />
     <ClInclude Include="_src\_header\SMainReadFileIndex.h" />
     <ClInclude Include="_src\_header\SRandomizerData.hpp" />
+    <ClInclude Include="_src\_header\SReachCollectionData.hpp" />
     <ClInclude Include="_src\_header\SReelChaData.hpp" />
     <ClInclude Include="_src\_header\SReelDrawData.hpp" />
     <ClInclude Include="_src\_header\SSlotGameDataWrapper.hpp" />
+    <ClInclude Include="_src\_header\SStopPosData.hpp" />
     <ClInclude Include="_src\_header\STouchInputList.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
