[ADD/FIX]反転フラグ仕様変更
特定箇所T追加：1箇所のみ制御するテーブルの表現ビット数が減る。作成時に対象+1の値をtableNoに記録する
反転フラグ独立：反転させながらShiftさせることが可能になる

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /Slot_CtrlMaker/playData.sav
 /Slot_CtrlMaker/Log.txt
 /Slot_CtrlMaker/playData.sav.bak
+/Slot_CtrlMaker/playData_bak20220212.sav
