[FIX]プログラム再起動時に停止位置制御が効かなくなる問題を修正
UpdateActiveFlagをReadRestore後に全フラグに対し実行することで対処した

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /Slot_CtrlMaker/Log.txt
 /Slot_CtrlMaker/playData.sav.bak
 /Slot_CtrlMaker/playData_bak20220212.sav
+/Slot_CtrlMaker/playData_20220227.sav
