--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /Slot_CtrlMaker/playData.sav.bak
 /Slot_CtrlMaker/playData_bak20220212.sav
 /Slot_CtrlMaker/playData_20220227.sav
+/Slot_CtrlMaker/playData_bak220703.sav
