[FIX]drawPos定義とsubFlag定義を分離

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ FodyWeavers.xsd
 /Slot_CtrlMaker/playData_bak20220212.sav
 /Slot_CtrlMaker/playData_20220227.sav
 /Slot_CtrlMaker/playData_bak220703.sav
+/Slot_CtrlMaker/playData_bak20220928.sav
